<resources>
    <string name="app_name">BeLivre</string>
    <string name="profile_display_name">%1$s %2$s.</string>
    <string name="publisher_search">Publisher : %1$s</string>
    <string name="authors_search">Authors : %1$s</string>
    <string name="authors">%1$s, %2$s</string>
    <string name="reviewCount">(%1$s)</string>
    <string name="categories_search">Categories : %1$s</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="display_name">Display Name</string>
    <string name="profile_picture">Profile picture</string>
    <string name="update_error">An error occurred while updating</string>
    <string name="update_success">Update successfully completed</string>
    <string name="select_city_first">Please select a city first</string>
    <string name="no_api_key">No API key defined</string>
    <string name="city_add_success">City successfully added</string>
    <string name="user_add_success">User successfully added</string>
    <string name="user_updated_success">User successfully updated</string>
    <string name="book_updated_success">Book successfully updated</string>
    <string name="message_updated_success">Message successfully updated</string>
    <string name="bookreview_updated_success">Review successfully updated</string>
    <string name="update_fail">An error occurred during the update</string>
    <string name="empty_field">One or more field is empty</string>
    <string name="choose_your_profile_picture">Choose your profile picture</string>
    <string name="path_to_media">Path to media</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="use_default_profile_picture">Use default Profile Picture</string>
    <string name="city">City</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="my_library">My Library</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="home_page">You are already on the home page</string>
    <string name="search_book">Search book</string>
    <string name="add_book">Add book</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="no_authors">No authors defined</string>
    <string name="no_publisher">No publisher defined</string>
    <string name="no_categories">No categories defined</string>
    <string name="textview">TextView</string>
    <string name="cover_picture">Cover Picture</string>
    <string name="see_offers">See offers</string>
    <string name="no_published_date">No published date defined</string>
    <string name="published_date">Published on : %1$s</string>
    <string name="no_description">No description specified</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="maxium_char_limit">Maximum characters limit reached - 500/500</string>
    <string name="count_char">%1$s/500</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="book_cover">Book cover</string>
    <string name="review_count_placeholder">(0)</string>
    <string name="what_do_you_want">What do you want to do ?</string>
    <string name="view_details">View book details</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="no">No</string>
    <string name="status_1">Available</string>
    <string name="status_2">Borrow request pending</string>
    <string name="status_3">Borrowed</string>
    <string name="status_4">Waiting for return</string>
    <string name="not_borrowed_yet">N/A</string>
    <string name="last_borrower">Last borrower :</string>
    <string name="borrowed_on">Borrowed on :</string>
    <string name="status">Status :</string>
    <string name="alert_icon">Alert icon</string>
    <string name="request_dialog_dn">%1$s would like to borrow this book</string>
    <string name="borrowed_dialog_dn">%1$s is currently borrowing your book</string>
    <string name="borrowed_dialog_dn_borrowed_tab">%1$s is the owner of this book</string>
    <string name="return_dialog_dn">%1$s would like to return your book</string>
    <string name="exchange_request_pending">Exchange request pending</string>
    <string name="send_message">Send Message</string>
    <string name="refuse">Refuse</string>
    <string name="accept">Accept</string>
    <string name="logout">Logout</string>
    <string name="date_pattern">dd/MM/yyyy</string>
    <string name="are_you_sure_accept_exchange">Are you sure you want to confirm the exchange? (Note that your book will
        be considered as actually borrowed by this person)
    </string>
    <string name="confirm_exchange">Confirm exchange</string>
    <string name="are_you_sure_refuse_exchange">Are you sure you want to refuse the exchange request? (Note that your
        book will then be considered \"Available\" again)
    </string>
    <string name="refuse_exchange">Refuse exchange</string>
    <string name="confirm_return">Confirm return</string>
    <string name="book_return_request_pending">Book return request pending</string>
    <string name="are_you_sure_accept_return">Are you sure you want to confirm that your book has been returned to you?
        (Note that your book will then be considered \"Available\" again)
    </string>
    <string name="borrowed_icon">Borrowed Icon</string>
    <string name="request_icon">Request icon</string>
    <string name="requests">Requests</string>
    <string name="borrowed">Borrowed</string>
    <string name="owner">Owner :</string>
    <string name="city_title">City :</string>
    <string name="return_request_message">Are you sure you want to send the owner a return request?
    </string>
    <string name="return_request_title">Send a return request</string>
    <string name="send_return_request">Send return request</string>
    <string name="cancel_request">Cancel request</string>
    <string name="exchange_requesst">Exchange request pending</string>
    <string name="return_request">Return request pending</string>
    <string name="icon">Icon</string>
    <string name="you_have_not_added_any_books_to_your_library_yet">You have not added any books to your library yet!
    </string>
    <string name="you_don_t_have_borrowed_any_book_at_the_moment">You are not borrowing any book at the moment !
    </string>
    <string name="show_less">Show less</string>
    <string name="show_more">Show more</string>
    <string name="offers_count">See offers (%1$s)</string>
    <string name="send_request">Send request</string>
    <string name="are_you_sure_request_borrow">Are you sure you want to send the book owner a borrowing request?
    </string>
    <string name="send_a_borrowing_request">Send a borrowing request</string>
    <string name="list_fragment">List Fragment</string>
    <string name="map_fragment">Map Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="chat">Chat</string>
    <string name="categories">Categories :</string>
    <string name="authors_title">Authors :</string>
    <string name="publisher">Publisher :</string>
    <string name="no_book_available">Sorry, there is no book available for this city !</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua.
    </string>
    <string name="you_have_not_started_any_conversation_yet">You have not started any conversation yet</string>
    <string name="belivre_logo">BeLivre logo</string>
    <string name="search_a_book">Search a book</string>
    <string name="search">Search</string>
    <string name="book_title">Book title</string>
    <string name="authors_hint">Authors</string>
    <string name="publisher_hint">Publisher</string>
    <string name="rating_title">Rating :</string>
</resources>
