<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/home" />
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_avatar"
                android:title="@string/profile" />
        <item
                android:id="@+id/nav_library"
                android:icon="@drawable/ic_library"
                app:actionViewClass="android.widget.TextView"
                android:title="@string/my_library" />

        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
    </group>

</menu>