<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/linearLayout">

    <TextView
            android:text="@string/book_return_request_pending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:id="@+id/requestReturnDialogIV"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView3"
            app:srcCompat="@drawable/ic_avatar" android:contentDescription="@string/profile_picture"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/requestSenderTVReturnDialog"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@id/requestReturnDialogIV"
            android:layout_marginTop="16dp" android:textColor="@android:color/black"/>
    <Button
            android:text="@string/send_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/messageButtonReturnRequestDialog"
            app:layout_constraintTop_toBottomOf="@id/requestSenderTVReturnDialog" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_button_accent"/>
    <Button
            android:text="@string/confirm_return"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/confirmButtonRequestDialog"
            android:background="@drawable/rounded_button_green" android:textColor="@android:color/white"
            android:paddingStart="8dp" android:layout_weight="50"
            android:paddingEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/messageButtonReturnRequestDialog" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>