<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:orientation="vertical">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_round_white_transparent"
            android:layout_marginTop="7dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
        <ImageView
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:id="@+id/coverCity" android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp" app:srcCompat="@drawable/ic_launcher_background"
                android:contentDescription="@string/book_cover"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp" android:layout_marginBottom="15dp">
            <TextView
                    android:text="@string/textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/titleCity"
                    android:paddingBottom="5dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/categoriesCity"
                        android:paddingBottom="5dp" android:layout_marginEnd="5dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/categoriesCityValue"
                        android:paddingBottom="5dp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/authors_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/authorsCity"
                        android:paddingBottom="5dp" android:layout_marginEnd="5dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/authorsCityValue"
                        android:paddingBottom="5dp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/publisher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/publisherCity"
                        android:paddingBottom="5dp" android:layout_marginEnd="5dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/publisherCityValue"
                        android:paddingBottom="5dp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/owner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/ownerCity"
                        android:paddingBottom="5dp" android:layout_marginEnd="5dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/ownerCityValue"
                        android:paddingBottom="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
